// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CVC verification card renders correctly when CVC check is disabled 1`] = `
.emotion-0 {
  background-color: #fff;
  color: #1e1e1e;
  position: relative;
  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
  outline: none;
  border-radius: calc(8px - 1px);
}

.emotion-2 {
  height: 100%;
}

.emotion-4 {
  box-sizing: border-box;
  height: auto;
  max-height: 100%;
  padding: calc(4px * 4) calc(4px * 6);
}

.emotion-4:first-of-type {
  border-top-left-radius: calc(8px - 1px);
  border-top-right-radius: calc(8px - 1px);
}

.emotion-4:last-of-type {
  border-bottom-left-radius: calc(8px - 1px);
  border-bottom-right-radius: calc(8px - 1px);
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: calc(4px * 2);
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  width: 100%;
}

.emotion-8>* {
  min-width: 0;
}

.emotion-10 {
  display: block;
  max-height: 100%;
  max-width: 100%;
  min-height: 0;
  min-width: 0;
}

.emotion-14 {
  background: transparent;
  display: block;
  margin: 0!important;
  pointer-events: none;
  position: absolute;
  will-change: box-shadow;
  border-radius: inherit;
  bottom: 0;
  box-shadow: 0 0px 0px 0 rgba(0, 0, 0, 0);
  opacity: 1;
  left: 0;
  right: 0;
  top: 0;
  border-radius: 8px;
}

@media not ( prefers-reduced-motion ) {
  .emotion-14 {
    -webkit-transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
    transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
  }
}

<div>
  <div
    class="components-surface components-card fraud-protection-rule-card emotion-0 emotion-1"
    data-wp-c16t="true"
    data-wp-component="Card"
    id="cvc-verification-card"
  >
    <div
      class="emotion-2 emotion-1"
    >
      <div
        class="components-card__body components-card-body wcpay-card-body wcpay-card-body emotion-4 emotion-1"
        data-wp-c16t="true"
        data-wp-component="CardBody"
      >
        <h4>
          CVC Verification
        </h4>
        <div
          class="wcpay-inline-notice wcpay-inline-warning-notice components-notice is-warning"
        >
          <div
            class="components-visually-hidden emotion-6 emotion-1"
            data-wp-c16t="true"
            data-wp-component="VisuallyHidden"
            style="border: 0px; clip: rect(1px, 1px, 1px, 1px); clip-path: inset( 50% ); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; word-wrap: normal;"
          >
            Warning notice
          </div>
          <div
            class="components-notice__content"
          >
            <div
              class="components-flex emotion-8 emotion-1"
              data-wp-c16t="true"
              data-wp-component="Flex"
            >
              <div
                class="components-flex-item wcpay-inline-notice__icon wcpay-inline-warning-notice__icon emotion-10 emotion-1"
                data-wp-c16t="true"
                data-wp-component="FlexItem"
              >
                <svg
                  class="gridicon gridicons-notice-outline"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g>
                    <path
                      d="M12 4c4.411 0 8 3.589 8 8s-3.589 8-8 8-8-3.589-8-8 3.589-8 8-8m0-2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2zm1 13h-2v2h2v-2zm-2-2h2l.5-6h-3l.5 6z"
                    />
                  </g>
                </svg>
              </div>
              <div
                class="components-flex-item wcpay-inline-notice__content wcpay-inline-warning-notice__content emotion-10 emotion-1"
                data-wp-c16t="true"
                data-wp-component="FlexItem"
              >
                This filter is disabled, and cannot be modified.
              </div>
            </div>
            <div
              class="components-notice__actions"
            />
          </div>
        </div>
        <div
          class="fraud-protection-rule-description"
        >
          <strong>
            How does this filter protect me?
          </strong>
          <p>
            Because the card security code appears only on the card and not on receipts or statements, the card security code provides some assurance that the physical card is in the possession of the buyer.
          </p>
        </div>
      </div>
    </div>
    <div
      aria-hidden="true"
      class="components-elevation emotion-14 emotion-1"
      data-wp-c16t="true"
      data-wp-component="Elevation"
    />
    <div
      aria-hidden="true"
      class="components-elevation emotion-14 emotion-1"
      data-wp-c16t="true"
      data-wp-component="Elevation"
    />
  </div>
</div>
`;

exports[`CVC verification card renders correctly when CVC check is enabled 1`] = `
.emotion-0 {
  background-color: #fff;
  color: #1e1e1e;
  position: relative;
  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
  outline: none;
  border-radius: calc(8px - 1px);
}

.emotion-2 {
  height: 100%;
}

.emotion-4 {
  box-sizing: border-box;
  height: auto;
  max-height: 100%;
  padding: calc(4px * 4) calc(4px * 6);
}

.emotion-4:first-of-type {
  border-top-left-radius: calc(8px - 1px);
  border-top-right-radius: calc(8px - 1px);
}

.emotion-4:last-of-type {
  border-bottom-left-radius: calc(8px - 1px);
  border-bottom-right-radius: calc(8px - 1px);
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: calc(4px * 2);
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  width: 100%;
}

.emotion-8>* {
  min-width: 0;
}

.emotion-10 {
  display: block;
  max-height: 100%;
  max-width: 100%;
  min-height: 0;
  min-width: 0;
}

.emotion-14 {
  background: transparent;
  display: block;
  margin: 0!important;
  pointer-events: none;
  position: absolute;
  will-change: box-shadow;
  border-radius: inherit;
  bottom: 0;
  box-shadow: 0 0px 0px 0 rgba(0, 0, 0, 0);
  opacity: 1;
  left: 0;
  right: 0;
  top: 0;
  border-radius: 8px;
}

@media not ( prefers-reduced-motion ) {
  .emotion-14 {
    -webkit-transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
    transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
  }
}

<div>
  <div
    class="components-surface components-card fraud-protection-rule-card emotion-0 emotion-1"
    data-wp-c16t="true"
    data-wp-component="Card"
    id="cvc-verification-card"
  >
    <div
      class="emotion-2 emotion-1"
    >
      <div
        class="components-card__body components-card-body wcpay-card-body wcpay-card-body emotion-4 emotion-1"
        data-wp-c16t="true"
        data-wp-component="CardBody"
      >
        <h4>
          CVC Verification
        </h4>
        <div
          class="wcpay-inline-notice wcpay-inline-warning-notice components-notice is-warning"
        >
          <div
            class="components-visually-hidden emotion-6 emotion-1"
            data-wp-c16t="true"
            data-wp-component="VisuallyHidden"
            style="border: 0px; clip: rect(1px, 1px, 1px, 1px); clip-path: inset( 50% ); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; word-wrap: normal;"
          >
            Warning notice
          </div>
          <div
            class="components-notice__content"
          >
            <div
              class="components-flex emotion-8 emotion-1"
              data-wp-c16t="true"
              data-wp-component="Flex"
            >
              <div
                class="components-flex-item wcpay-inline-notice__icon wcpay-inline-warning-notice__icon emotion-10 emotion-1"
                data-wp-c16t="true"
                data-wp-component="FlexItem"
              >
                <svg
                  class="gridicon gridicons-notice-outline"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g>
                    <path
                      d="M12 4c4.411 0 8 3.589 8 8s-3.589 8-8 8-8-3.589-8-8 3.589-8 8-8m0-2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2zm1 13h-2v2h2v-2zm-2-2h2l.5-6h-3l.5 6z"
                    />
                  </g>
                </svg>
              </div>
              <div
                class="components-flex-item wcpay-inline-notice__content wcpay-inline-warning-notice__content emotion-10 emotion-1"
                data-wp-c16t="true"
                data-wp-component="FlexItem"
              >
                For security, this filter is enabled and cannot be modified. Payments failing CVC verification will be blocked. 
                <a
                  class="components-external-link"
                  href="https://woocommerce.com/document/woopayments/fraud-and-disputes/fraud-protection/#advanced-configuration"
                  rel="external noreferrer noopener"
                  target="_blank"
                >
                  <span
                    class="components-external-link__contents"
                  >
                    Learn more
                  </span>
                  <span
                    aria-label="(opens in a new tab)"
                    class="components-external-link__icon"
                  >
                    ↗
                  </span>
                </a>
              </div>
            </div>
            <div
              class="components-notice__actions"
            />
          </div>
        </div>
        <div
          class="fraud-protection-rule-description"
        >
          <strong>
            How does this filter protect me?
          </strong>
          <p>
            Because the card security code appears only on the card and not on receipts or statements, the card security code provides some assurance that the physical card is in the possession of the buyer.
          </p>
        </div>
      </div>
    </div>
    <div
      aria-hidden="true"
      class="components-elevation emotion-14 emotion-1"
      data-wp-c16t="true"
      data-wp-component="Elevation"
    />
    <div
      aria-hidden="true"
      class="components-elevation emotion-14 emotion-1"
      data-wp-c16t="true"
      data-wp-component="Elevation"
    />
  </div>
</div>
`;
